5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1793_1613.log
== TEST (2019-05-30 18:50:42) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: "))).upper()
y=array(eval(input("digite o tempo das atividades: "))).upper()
t=0
h=0
while(size(x)>h):
	if(x[h]=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:17) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: "))).upper()
y=array(eval(input("digite o tempo das atividades: "))).upper()
t=0
h=0
while(size(x)>h):
	if(x[h]=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:13) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: "))).upper()
y=array(eval(input("digite o tempo das atividades: "))).upper()
t=0
h=0
while(size(x)>h):
	if(x[h]=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:26) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: "))).upper()
y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:49) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:54) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h].upper())=="ALONGAMENTO"):
		t=t+(y[h]*3)
		h=h+1
	elif(x[h].upper())=="CORRIDA"):
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h].upper())=="DANÇA"):
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h].upper())=="ESCALADA"):
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h].upper()=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
File "XXXX", line 8
    if(x[h].upper())=="ALONGAMENTO"):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:57:22) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h].upper())=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h].upper())=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h].upper())=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h].upper())=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h].upper()=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:51) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h].upper())=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h]=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h]=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h]=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h]=="HIDROGINASTICA"):
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
File "XXXX", line 11
    elif(x[h]=="CORRIDA":
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:50) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1
	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:39) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		print(t)
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1
		print(t)
	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
		print(t)
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		print(t)
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1
		print(t)
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:10) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		print(t)
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1
		print(t)
	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
		print(t)
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		print(t)
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1
		print(t)
		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:47) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:30) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:21) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:27) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:25) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:21:11) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:42) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:27:23) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:16) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="alongamento":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="corrida":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="dança":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="escalada":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="hidroginastica":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:58) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:28) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:58) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2240
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2345.12
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2239.97
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2283.85
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
1486.07
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2241.73
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2184.63
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2143.64
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
721.643
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
1075.08
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2068.28
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
1962.76
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:59) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
789.513
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
task 09c51086cba8f9118d6803720071632709c991eceecc979e9a0952710c8eb98e not found: not found
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:00) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
1260.99
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:00) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
153.078
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:00) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
2241
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:

-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:00) 
-- CODE:
from numpy import*
x=array(eval(input("digite o nome das atividades fisicas: ")))

y=array(eval(input("digite o tempo das atividades: ")))
t=0
h=0
while(size(x)>h):
	x[h]=str(x[h]).upper()
	if(x[h])=="ALONGAMENTO":
		t=t+(y[h]*3)
		h=h+1
		
	elif(x[h])=="CORRIDA":
		t=t+(y[h]*10.3)
		h=h+1

	elif(x[h])=="DANÇA":
		t=t+(y[h]*6.7)
		h=h+1
	
	elif(x[h])=="ESCALADA":
		t=t+(y[h]*9.7)
		h=h+1
		
	elif(x[h])=="HIDROGINASTICA":
		t=t+(y[h]*5)
		h=h+1

		
print(round(t,2))

-- EXECUTION TIME:
0.444585
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
389.0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
389.0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
389.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
